--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>To Do List</h1>
+    <br>
+    
     <div id="main">
-        <input type="text" id="task" name="task" value="">
-        <button onclick="add()" id="add">ADD TASK</button>
+        <div id="head"> <h1>To Do List</h1></div>
+        <div id="newtask">
+            <input type="text" placeholder="Add Tasks">
+            <button id="push">Add</button>
+        </div>
     </div>
     <br><br>
     <div id="list"></div>
