--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/a81dc31347.js" crossorigin="anonymous"></script>
     <script src="index.js"></script>
 </head>
 <body>
@@ -14,9 +15,8 @@
         <div id="newtask">
             <input type="text" placeholder="Add Tasks">
             <button id="push" onclick="submit()">Add</button>
-            <div id="tasks"></div>
         </div>
+        <div id="tasks"></div>
     </div>
-    <div id="list"> <div id="tasks"></div></div>
 </body>
 </html>
