--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="main">
         <div id="head"> <h1>To Do List</h1></div>
         <div id="newtask">
-            <input type="text" placeholder="Add Tasks">
+          <textarea placeholder="Add the task"></textarea>
             <button id="push" onclick="submit()">Add</button>
         </div>
         <div id="tasks"></div>
