--- a/mvc.html
+++ b/mvc.html
@@ -8,7 +8,7 @@
     <title>To do list MVC</title>
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root"><h1>To Do List</h1></div>
     <script src="mvc.js"></script>
 </body>
 </html>
