--- a/mvc.html
+++ b/mvc.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <div id="root"><h1>To Do List</h1></div>
-    <script src="mvc.js"></script>
+    <script type="module" src="control.js"></script>
 </body>
 </html>
